components/scss/style.scss
@import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400i,700,700i');
@import 'normalize';
@import 'borderbox';

@import 'colours';/* all our custom colours */

html, body, button {
	font-family: 'Quattrocento Sans', 'Helvetica', Arial, sans-serif;
}

/* main app container */
.appContainer {
	background-color: $orchid;
	min-height:100vh;
	display: flex;
}

p, ul, ol, li, a {
	font-size: 18px;
}

h1 {
	font-weight: 400;
	font-size: 40px;
	display: inline;

	span {
		font-weight: 700;
	}
}

.fieldWrapper {
	width: 100%;
	display: block;
	overflow: auto;
	padding: 5px 0;
}

label {
	display: flex;
	align-items: center;
	width: 20%;
	float: left;
	margin-bottom: 10px;
	margin-top: 10px;
}

input, textarea {
	padding: 10px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	width: 60%;
	float: left;
	margin-bottom: 10px;
	border: 1px solid $light-plum;
	-webkit-transition: all 0.30s ease-in-out;
	  -moz-transition: all 0.30s ease-in-out;
	  -ms-transition: all 0.30s ease-in-out;
	  -o-transition: all 0.30s ease-in-out;
	outline: none;
}

input[type=text]:focus, textarea:focus {
  box-shadow: 0 0 8px rgba(80, 36, 117, 0.71);
  border: 1px solid $light-plum;
}

button {
  background: #7bebe2;
  background-image: -webkit-linear-gradient(top, #7bebe2, #5ac7bc);
  background-image: -moz-linear-gradient(top, #7bebe2, #5ac7bc);
  background-image: -ms-linear-gradient(top, #7bebe2, #5ac7bc);
  background-image: -o-linear-gradient(top, #7bebe2, #5ac7bc);
  background-image: linear-gradient(to bottom, #7bebe2, #5ac7bc);
  -webkit-border-radius: 3;
  -moz-border-radius: 3;
  border-radius: 3px;
  font-family: 'Quattrocento Sans', 'Helvetica', Arial, sans-serif !important;
  font-weight: 600;
  letter-spacing: 1.1px;
  color: $orchid;
  font-size: 20px !important;
  padding: 15px 25px;
  text-shadow: 1px 1px 1px $dark-aqua;
  text-decoration: none;
  border: none;
  outline: none;
  margin-top: 30px !important;
  text-transform: uppercase !important;
  cursor: pointer;
}

button:hover {
  background: #5ac7bc;
  background-image: -webkit-linear-gradient(top, #5ac7bc, #7bebe2);
  background-image: -moz-linear-gradient(top, #5ac7bc, #7bebe2);
  background-image: -ms-linear-gradient(top, #5ac7bc, #7bebe2);
  background-image: -o-linear-gradient(top, #5ac7bc, #7bebe2);
  background-image: linear-gradient(to bottom, #5ac7bc, #7bebe2);
  text-decoration: none;
}

button.closeBtn {
	position: absolute;
	top: 80px;
	right: 30px;
	width: 60px;
	height: 60px;
	background: none;
	color: $deep-plum;
	text-shadow: none;
	padding: 10px;
	font-size: 30px !important;
}


.closeBtn {
	width: 100%;
}

/* HEADER */

.headerContainer {
	background: $deep-plum;
	color: #ffffff;
	display: flex;
	justify-content: space-between;
	position: fixed;
	width: 100%;
	z-index: 9999;
	-webkit-box-shadow: 0px 3px 8px -3px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 3px 8px -3px rgba(0,0,0,0.75);
	box-shadow: 0px 3px 8px -3px rgba(0,0,0,0.75);

	/* the wrapper for the logo section of the header */
	.logoContainer {
		display: flex;
		justify-content: flex-start;
		align-items: center;
		padding-left: 7px;

		.logoImg {
			margin-right: 8px;
			width: 70px;
			height: 70px;
		}
	}
	
	/* the wrapper for the search section of the header */
	.searchContainer {
		padding-right: 15px;
		display: flex;
		align-items: center;
		width: 55%;
		justify-content: flex-end;

		input {
			width: 70%;
			max-width: 400px;
			min-width: 150px;
			border: 0 none;
			background-color: $orchid;

		}

		/* the magnifying glass icon */
		#searchIcon {
			width: 35px;
			height: 35px;
			margin-left: 15px;

			path {
				width: 100%;
				fill: transparent;
				stroke: $aqua;
				stroke-width: 36px;
			}
		}
	}
}

/* the app contents below the header */
div.main {
	display: flex;
	flex-direction: row;
	flex: 1;
	padding-top: 78.88px;
}

/* the navigation sidebar */
aside {
	background-color: $grey-plum;
	padding: 15px 0;

	nav {
		width: 100%;
		font-size: 20px;
		color: $orchid;

		ul {
			list-style-type: none;
			text-align: left;
		    margin: 0;
		    padding: 0;
		}

	    li {
			padding: 15px 25px;
	    }

	    li a {
			color: $deep-plum;
			text-decoration: none;
			padding: 15px 10px;
		}

		li:hover {
			text-decoration: underline;
		}
		
	}
}

/* the main display area */
.content {
	padding: 30px 50px;
	flex: 1;
	color: $deep-plum;
	background-color: $orchid;
}

.addContactBtn {
	display: flex;
	align-items: center;
	position: fixed;
	top: 95px;
	right: 15px;
	width: 62px;
	height: 62px;
	background: $aqua;
	color: $orchid;
	text-shadow: 1px 1px 1px $dark-aqua;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	border-radius: 50%;
	padding: 15px 20px 20px 21px;
	font-family: 'Quattrocento Sans', 'Helvetica', Arial, sans-serif;
	font-size: 40px;
	z-index: 9999;
	text-decoration: none;

	::hover {
		text-decoration: none;
	}
}

.contactDetails {
	text-decoration: none;

	:hover {
		color: $aqua;
	}
}

/* CONTACT PREVIEW */

.contactPreviewContainer {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
	align-items: center;
	margin-bottom: 15px;
}

.previewImage {
	width: 40px;
	height: 40px;
	background-size: 100%;
	display: inline-block;
	margin-right: 15px;
}

.previewName {
	font-size: 20px;
}

/* ADD CONTACT PAGE */
.addContactContainer {
}

